move from osgi to jpms