@@ -1,14 +1,34 @@
+/**
+ * This file is part of muCommander, http://www.mucommander.com
+ *
+ * muCommander is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * muCommander is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+repositories.mavenCentral()
+
 dependencies {
     api project(':mucommander-commons-file')
     api project(':mucommander-protocol-api')
     api project(':mucommander-encoding')
     api project(':mucommander-translator')
 
-    implementation ('com.microsoft.graph:microsoft-graph:5.67.0') {
+    // These are non-module-path dependencies (will be automatic modules)
+    api ('com.microsoft.graph:microsoft-graph:5.67.0') {
         exclude group: 'com.google.code.gson', module: 'gson'
     }
-    implementation 'com.azure:azure-xml:1.0.0-beta.2'
-    implementation 'com.azure:azure-identity:1.9.2'
+    api 'com.azure:azure-xml:1.0.0-beta.2'
+    api 'com.azure:azure-identity:1.9.2'
 
     testImplementation(platform('org.junit:junit-bom:5.14.1'))
     testImplementation('org.junit.jupiter:junit-jupiter')
@@ -17,24 +37,8 @@ dependencies {
     testImplementation 'org.testng:testng:7.11.0'
 }
 
-repositories.mavenCentral()
-
 jar {
-    bundle {
-        bnd ('Bundle-Name': 'muCommander-onedrive',
-                'Bundle-Vendor': 'muCommander',
-                'Bundle-Description': 'Plugin for OneDrive',
-                'Bundle-DocURL': 'https://www.mucommander.com',
-                'Export-Package': 'com.mucommander.commons.protocol.onedrive',
-                'Bundle-Activator': 'com.mucommander.commons.file.protocol.onedrive.Activator',
-                'Specification-Title': "muCommander",
-                'Specification-Vendor': "Arik Hadas",
-                'Specification-Version': project.version+'-'+project.ext.release,
-                'Implementation-Title': "muCommander",
-                'Implementation-Vendor': "Arik Hadas",
-                'Implementation-Version': revision,
-                'Build-Date': new Date().format('yyyyMMdd'))
-    }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
 test {
@@ -42,4 +46,39 @@ test {
     testLogging {
         events "passed", "skipped", "failed"
     }
+}
+
+// Note: onedrive uses cloud libraries which have split package issues in JPMS
+// Compile on classpath with access to unnamed module dependencies
+compileJava {
+    options.compilerArgs += [
+        '--add-reads', 'org.mucommander.protocol.onedrive=ALL-UNNAMED'
+    ]
+}
+
+// JPMS module - compile module-info separately
+task compileModuleInfo(type: JavaCompile) {
+    dependsOn compileJava
+    source = fileTree('src/main/resources/module-info') {
+        include 'module-info.java'
+    }
+    destinationDirectory = compileJava.destinationDirectory
+    classpath = files()
+
+    doFirst {
+        def filteredClasspath = compileJava.classpath.filter {
+            !it.name.contains('microsoft-graph-') &&
+            !it.name.contains('azure-') &&
+            !it.name.contains('microsoft-kiota-') &&
+            !it.name.contains('okhttp-')
+        }
+        options.compilerArgs += [
+            '--module-path', filteredClasspath.asPath,
+            '--patch-module', 'org.mucommander.protocol.onedrive=' + compileJava.destinationDirectory.get().asFile.path
+        ]
+    }
+}
+
+classes {
+    dependsOn compileModuleInfo
 }
