@@ -1,3 +1,20 @@
+/**
+ * This file is part of muCommander, http://www.mucommander.com
+ *
+ * muCommander is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * muCommander is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+ 
 repositories {
     maven {
         url 'https://repository.jboss.org/maven2/'
@@ -10,15 +27,17 @@ dependencies {
     api project(':mucommander-protocol-api')
     api project(':mucommander-translator')
 
-    implementation ('org.jets3t:jets3t:0.9.7') {
+    api ('org.jets3t:jets3t:0.9.7') {
         exclude group: 'ch.qos.logback', module: 'logback-classic'
         exclude group: 'org.apache.tomcat', module: 'tomcat-servlet-api'
 
     }
-    implementation 'commons-logging:commons-logging:1.3.2'
-    implementation 'javax.xml:jaxrpc-api:1.1'
-    implementation 'org.glassfish:javax.xml.soap:10.0-b28'
-    implementation files('libs/mail.osgi-1.4.jar')
+    api 'commons-logging:commons-logging:1.3.2'
+    api 'javax.xml:jaxrpc-api:1.1'
+    api ('org.glassfish:javax.xml.soap:10.0-b28') {
+        exclude group: 'javax.xml.soap', module: 'javax.xml.soap-api'
+    }
+    api files('libs/mail.osgi-1.4.jar')
 
     testImplementation 'org.testng:testng:7.11.0'
     testImplementation project(':mucommander-commons-file')
@@ -26,19 +45,40 @@ dependencies {
 }
 
 jar {
-    bundle {
-        bnd ('Bundle-Name': 'muCommander-s3',
-                'Bundle-Vendor': 'muCommander',
-                'Bundle-Description': 'Library with configuration tools',
-                'Bundle-DocURL': 'https://www.mucommander.com',
-                'Export-Package': 'com.mucommander.commons.protocol.s3',
-                'Bundle-Activator': 'com.mucommander.commons.file.protocol.s3.Activator',
-                'Specification-Title': "muCommander",
-                'Specification-Vendor': "Arik Hadas",
-                'Specification-Version': project.version,
-                'Implementation-Title': "muCommander",
-                'Implementation-Vendor': "Arik Hadas",
-                'Implementation-Version': revision,
-                'Build-Date': new Date().format('yyyyMMdd'))
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
+// Note: S3 protocol uses jets3t library which is a non-modular library
+// We compile on classpath (not module path) with --add-reads=ALL-UNNAMED
+compileJava {
+    options.compilerArgs += [
+        '--add-reads', 'org.mucommander.protocol.s3=ALL-UNNAMED'
+    ]
+}
+
+// JPMS module - compile module-info separately
+task compileModuleInfo(type: JavaCompile) {
+    dependsOn compileJava
+    source = fileTree('src/main/resources/module-info') {
+        include 'module-info.java'
     }
+    destinationDirectory = compileJava.destinationDirectory
+    classpath = files()
+
+    doFirst {
+        def filteredClasspath = compileJava.classpath.filter {
+            !it.name.contains('jets3t-') &&
+            !it.name.contains('commons-logging-') &&
+            !it.name.contains('httpclient-') &&
+            !it.name.contains('httpcore-')
+        }
+        options.compilerArgs += [
+            '--module-path', filteredClasspath.asPath,
+            '--patch-module', 'org.mucommander.protocol.s3=' + compileJava.destinationDirectory.get().asFile.path
+        ]
+    }
+}
+
+classes {
+    dependsOn compileModuleInfo
 }
